--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,25 @@
     transform: rotate(360deg);
   }
 }
+
+ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+ul > li {
+  padding: 10px;
+  border: 1px solid black;
+  background-color: rgb(0,0,0, 0.2);
+}
+
+ul > li > a {
+  text-decoration: none;
+}
+
+section {
+  width: 100vw;
+  padding: 20px;
+}
